--- a/FDS/注意事项.md
+++ b/FDS/注意事项.md
@@ -33,3 +33,85 @@ Kruskal：找边
 
 ---
 
+LevelOrder
+
+```c
+void  levelorder ( tree_ptr  tree ) {
+    enqueue ( tree );
+    while (queue is not empty) {
+        visit ( T = dequeue ( ) );
+        for ( each child C of T )
+            enqueue ( C );
+    }
+}
+```
+
+---
+
+**Iterative** InOrder
+
+```c
+void  iter_inorder ( tree_ptr  tree ) {
+    Stack  S = CreateStack( MAX_SIZE );
+    for ( ; ; )  {
+        for ( ; tree; tree = tree->Left )
+            Push ( tree, S ) ;
+        tree = Top ( S );
+        Pop( S );
+        if ( ! tree )
+            break;
+        visit ( tree->Element );
+        tree = tree->Right;
+    }
+
+```
+
+**Iterative Program(Non-recursive)**
+
+  * **PreOrder**
+
+    法一：访问根，push右，push左，没有左则转到pop。
+  
+    ```c
+    void preTra(node* p) {
+        for (; p;) {
+            printf(" %d ", p->val);
+            if (p->right)
+                push(p->right);
+            if (p->left)
+                p = p->left;
+            else
+                p = pop();
+        }
+    }
+    ```
+  
+  * **InOrder**
+  
+    把左边按顺序全push，pop并访问，转到右
+  
+    ~~压右 压左 访问中~~
+  
+    ```c
+    void inTra(node* p) {
+        for (;;) {
+            for (; p; p = p->left)
+                push(p) ;
+            p = pop();
+            if (!p)
+                break;
+            printf(" %d ", p->val);
+            p = p->right;
+        }
+    }
+    ```
+  
+  * **PostOrder**
+  
+    压中 压右 访问左
+  
+    ```c
+    
+    ```
+
+---
