--- a/FDS/数据结构.md
+++ b/FDS/数据结构.md
@@ -90,11 +90,11 @@
   }
   ```
 
-* **Iterative Program(Non-recursive)**
+* **Iterative Program(Non-recursive)**(”转到“/”访问“ means `assign`)
 
   * **PreOrder**
 
-    法一：访问根，push右，push左，没有左则转到pop。
+    法一：访问根，push右，转到左，没有左则转到pop。
   
     ```c
     void preTra(node* p) {
@@ -112,7 +112,7 @@
   
   * **InOrder**
   
-    把左边按顺序全push，pop并访问，转到右
+    把左边(包括当前)按顺序全push，pop并访问，转到右
   
     ~~压右 压左 访问中~~
   
