--- a/FDS/注意事项.md
+++ b/FDS/注意事项.md
@@ -12,6 +12,8 @@ radixSort用的是队列不是栈！！！
 | ---------------------- | -------------------- |
 | 冒泡、插入、归并、基数 | 选择、快速、希尔、堆 |
 
+![sort](注意事项.assets/sort.png)
+
 ---
 
 Prim：找点
@@ -63,55 +65,36 @@ void  iter_inorder ( tree_ptr  tree ) {
         visit ( tree->Element );
         tree = tree->Right;
     }
-
+}
 ```
 
-**Iterative Program(Non-recursive)**
-
-  * **PreOrder**
-
-    法一：访问根，push右，push左，没有左则转到pop。
-  
-    ```c
-    void preTra(node* p) {
-        for (; p;) {
-            printf(" %d ", p->val);
-            if (p->right)
-                push(p->right);
-            if (p->left)
-                p = p->left;
-            else
-                p = pop();
-        }
-    }
-    ```
-  
-  * **InOrder**
-  
-    把左边按顺序全push，pop并访问，转到右
-  
-    ~~压右 压左 访问中~~
-  
-    ```c
-    void inTra(node* p) {
-        for (;;) {
-            for (; p; p = p->left)
-                push(p) ;
-            p = pop();
-            if (!p)
-                break;
-            printf(" %d ", p->val);
-            p = p->right;
-        }
-    }
-    ```
-  
-  * **PostOrder**
-  
-    压中 压右 访问左
-  
-    ```c
-    
-    ```
+Implementation见另一个md
 
 ---
+
+<img src="注意事项.assets/image-20200110145857627.png" alt="image-20200110145857627" style="zoom:33%;" />
+
+要用原始IDE调试，需在取名时有所注意
+
+---
+
+Week13
+
+For the quicksort implementation {with (**neither the left nor the right pointer**) <u>stops</u> [when **an element** (with the same key as the pivot) <u>is found</u>] (during the partitioning)}, what is the running time when all keys are equal?
+
+1. O(logN)
+2. O(N)
+3. O(NlogN)
+4. O(N^2^)
+
+---
+
+Topological Sort
+
+1. Find  a vertex with inDeg == 0
+   1. if nFound, cylic
+2. delete all the edges from it and calculate corresponding inDeg of adjacent verteices
+3. repeat 1.
+
+---
+
