--- a/GP/普物2重要公式.md
+++ b/GP/普物2重要公式.md
@@ -64,8 +64,6 @@ P_{\vec n} = \sigma'
 \\
 $$
 
-==注意Q0与Q的区别，回归定义，Q0是极板上带的电荷，Q'是介质边缘被激发的，因此Q是他们的代数和，考试不要弄混了。看Ch26的39题，那个第二问的板上自由电荷问的就是Q_0，他的值就是C(算上电介质的电容)V(算上电介质的电势差)==
-
 CXY定理
 $$
 \left \{ \begin{array} {}
@@ -83,7 +81,7 @@ $$
 $$
 i = nqAv_d; j = nqv_d
 \\
-\vec j = \sigma \vec E(\sigma为电导率
+\vec j = \sigma \vec E
 \\
 \sum \Delta V_i = 0
 \\
@@ -148,10 +146,8 @@ $$
 \\
 = \int (\vec v \times \vec B) \cdot d \vec l【动生】
 \\
-= -L\frac{di}{dt}【电感】
-\\,L = \frac{N\Phi_B}{i}
-\\
-互感M公式相同: \Phi_{12} = M_{12}i_1 ; \Phi_{21} = M_{21}i_2 ;\varepsilon_2 \xlongequal{法拉第}-M\frac{di_2}{dt}
+= -L\frac{di}{dt}
+,L = \frac{N\Phi_B}{i}【电感】
 $$
 
 ###### 能量
@@ -171,45 +167,7 @@ $$
 | $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
 | $\vec D = \varepsilon_0 \vec E + \vec P \xlongequal{Vacumn} \varepsilon_0 \vec E_0$ | $\vec B = \mu_0\vec H + \vec M = \mu_0 \vec H$ ($\vec H = \frac{\vec B}{\mu_0} - \vec M$) |
 | $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
-|                                                              |                                                              |
 | $\sigma' = \vec P \cdot \vec n$                              | $\vec j = \vec M \times \vec n$                              |
-| $U = \frac{q^2}{2C}=\frac{q\Delta V}2$<br/>$u = \frac{\varepsilon_0E^2}2$ | $U = \frac{Li^2}2$<br/>$u = \frac{B^2}{2\mu_0}$              |
-
-###### 麦克斯韦
-
-$$
-\left \{ \begin{array}{}
-	\mathop\oint_A \vec D \cdot d \vec A = \sum q
-	\\
-	\mathop\oint_A \vec B \cdot d \vec A = 0
-	\\
-	\mathop\oint_L \vec E \cdot d \vec l = -\int \frac{\partial \vec B}{\partial t} \cdot d \vec A
-	\\
-	\mathop\oint_L \vec H \cdot d \vec l = (\sum i + \int \frac{\partial \vec D}{\partial t} \cdot d \vec A)
-\end{array} \right.
-
-\Longrightarrow\left \{ \begin{array}{}
-	\mathop\oint_A \vec E \cdot d \vec A = \frac{\sum q}{\varepsilon_0}
-	\\
-	\mathop\oint_A \vec B \cdot d \vec A = 0
-	\\
-	\mathop\oint_L \vec E \cdot d \vec l = -\int \frac{\partial \vec B}{\partial t} \cdot d \vec A
-	\\
-	\mathop\oint_L \vec B \cdot d \vec l = \mu_0(\sum i + \varepsilon_0\int \frac{\partial \vec E}{\partial t} \cdot d \vec A)
-\end{array} \right.
-
-\Longrightarrow
-
-\left \{ \begin{array}{}
-	\nabla \cdot \vec E = \frac{\rho}{\varepsilon_0}
-	\\
-	\nabla \cdot \vec B = 0
-	\\
-	\nabla \times \vec E = -\frac{\partial \vec B}{\partial t}
-	\\
-	\nabla \times \vec B = \mu_0(j + \varepsilon_0\frac{\partial \vec E}{\partial t})
-\end{array} \right.
-$$
 
 ###### 电磁波
 
@@ -230,7 +188,7 @@ $$
 \\
 X_L = \omega L
 \\
-\Delta V_C = \frac{q}{C} = \frac{i_m}{\omega C}\sin(\omega t - \phi - \frac\pi 2)
+\Delta V_C = \frac{q}{C} = \frac{i_m}{\omega C}\sin(\omega t - \phi - \frac\pi 2)__
 \\
 X_C = \frac{1}{\omega C}
 \\
@@ -255,7 +213,7 @@ $\displaystyle \frac{1}{v} + \frac{1}{-u} = {\frac{1}{f}}$
 
 ==记忆法：代入过焦点平行的情况，凸正凹负==
 
-磨镜者公式：$\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$ (n1一般是真空的，R1与R2分别是两个表面的曲率半径(有符号数，规则同折射)（注意符号，看P488-26）)，这个拿普通透镜的公式推一遍就记住了
+磨镜者公式：$\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$ (n1一般是真空的，R1与R2分别是两个表面的曲率半径(有符号数，规则同折射))，这个拿普通透镜的公式推一遍就记住了
 
 ###### 干涉
 
@@ -274,7 +232,7 @@ $I = 4I_0\cos(\frac{\Delta\varphi}{2})$
 
 
 
-**薄膜干涉**：记得半波损失即可，但是半波损失也不是什么时候都有的
+**薄膜干涉**：记得半波损失即可
 
 
 
@@ -314,29 +272,9 @@ $\begin{cases} a\sin\theta = k_1\lambda \\ d\sin\theta = k_2\lambda \end{cases}{
 
 ##### 量子
 
-###### 热辐射
-
-* 单色辐射出射度：$R_\lambda(T) = \frac{dR_\lambda}{d\lambda}{}$
-* 辐射出射度：$R(T)$
-* 辐射率：$\varepsilon_\lambda$
-* 吸收率：$A_\varepsilon$
-
-Kirchhoff’s Law: Thermodynamic Equilibrium $\Longleftrightarrow$ $\varepsilon_\lambda = A_\varepsilon$
-
-Stefan-Boltzmann Law：黑体的热辐射 $R_B(T) = \int R\lambda(T)d\lambda = \sigma T^4$
-
-Wien Displacement Law: $T\lambda_{m} = b$，$\lambda_{m}$为黑体辐射曲线的峰值
-
 ###### 光电效应
 
 $h\nu = E_{km}+A \Longrightarrow U_a = \frac{h}{e}\nu - \frac{A}{e}{}$
-
-###### 光量子
-
-* 动质量：$m = \frac{E}{c^2} = \frac{h\nu}{c^2}{}$
-* 静质量：$m_0 = m \sqrt{1-\frac{v^2}{c^2}} = 0$
-* 动量：$p = mc = \frac{h\nu}{c} = \frac{h}{\lambda}{}$
-* 康普顿效应：$\Delta\lambda = 2\lambda_c \sin^2\frac{\varphi}2 (\lambda_c = \frac{h}{m_0c})$
 
 ###### 物质波
 
@@ -372,10 +310,9 @@ $T = \exp(-\frac{2}{\hbar}L\sqrt{2m(U_0-E)})$(光强正比于振幅的平方)
 
 ###### 玻尔半径
 
-==$\begin{array}{ll}r_n = n^2\frac{\varepsilon_0 h^2}{\pi me^2} & n=1,2,3,...\end{array}{}$==，特殊地，称n=1的轨道半径为玻尔半径
-
-==$E_n = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})\ n = 1,2,3,...$==，将这些分立的<u>能量值</u>称为**能级**。特殊地，氢原子$E_1 = -13.6eV$
+$\begin{array}{ll}r_n = n^2\frac{\varepsilon_0 h^2}{\pi me^2} & n=1,2,3,...\end{array}{}$，特殊地，称n=1的轨道半径为玻尔半径
 
 
 
-<u>后面一部分看主笔记了</u>
+$E_n = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})\ n = 1,2,3,...$，将这些分立的<u>能量值</u>称为**能级**。特殊地，氢原子$E_1 = -13.6eV$
+
