--- a/马原.md
+++ b/马原.md
@@ -1,3 +1,5 @@
+[TOC]
+
 # 马克思
 
 **世界观与方法论**
@@ -15,6 +17,18 @@
 
 # 哲学
 
+**基本问题**：
+
+* 第一方面是思维和存在、意识和物质何者为本原的问题；
+* 另一方面是思维和存在的同一性问题。
+    * 如果认为思维和存在具有同一性，即思维能正确反映存在的，就是可知论。
+    * 如果认为思维和存在没有同一性，即思维不能正确反映存在的，就是不可知论。
+* 哲学基本问题的两个方面是相互联系、不可分割的。
+    * 只有从唯物主义观点出发，才可能科学地解决世界的可知性问题
+    * 也只有坚持世界的可知性，才可能把唯物主义的基本原理贯彻到底。
+
+
+
 ## 物质性
 
 **唯物唯心**：物质与精神何者是第一性(谁是世界本源)
@@ -27,15 +41,30 @@
 
 **客观实在性**：物质的唯一特性
 
+[五种哲学流派代表观点 - 百度文库](https://wenku.baidu.com/view/f6bc1157ad02de80d4d840fb.html)
 
+**唯心主义**
+
+* 主观唯心主义
+    * 把主观精神作为惟一真实的存在和世界的本原，客观事物以至整个物质世界都是这种主观精神的产物。其荒谬之处在于它必然导致"唯我论"。
+    * 代表人物：费希特、贝克莱、孟子、王守仁
+* 客观唯心主义
+    * 把人的意识与所反映的客观内容、所依赖的物质实体割裂开
+    * 把某种脱离任何个人的精神变为独立的存在，并把它作为世界的本原（例如理、理念、宇宙精神、绝对观念等），其荒谬之处在于以哲学化的方式承认"宗教创世说"。
+    * 柏拉图、黑格尔、老庄朱
 
 **唯物主义**
 
 * 朴素唯物主义：某一种物质作为本原
-* 近代形而上学(机械)唯物主义：原子
-* [历史唯物主义](https://baike.baidu.com/item/历史唯物主义)：历史的所有事件发生的根本原因是物资的丰富程度，社会历史的发展有其自身固有的客观规律。
+    * 代表人物：古希腊的泰勒斯、 阿那克西米尼、 赫拉克利特、 德谟克利特 (集大成者) ;在中国产生于春秋战国时期， 其代表人物是 王夫之、范缜、张载等、荀子（天道有常）
+* 近代形而上学(机械)唯物主义：把物质等同于原子
+    * 代表人物：霍布斯、培根、洛克、狄德罗、霍尔巴赫、费尔巴哈
+* 辩证唯物主义和[历史唯物主义](https://baike.baidu.com/item/历史唯物主义)
+    * 辩证唯物主义是由辩证的唯物论和唯物的辩证法、辩证唯物主义认识论三部分组成。
+    * 历史的所有事件发生的根本原因是物资的丰富程度，社会历史的发展有其自身固有的客观规律。
+    * 代表人物：马恩列毛邓
 
-
+==不是有原子的就是近代形而上学：一切事物都是由不能再分的物质微粒原子组成的。（德谟克利特、伊壁鸠鲁的原子唯物论）这里这个原子就不是物理意义上的原子==
 
 **运动**：相对
 
@@ -43,9 +72,9 @@
 
 **物质与意识**
 
+* 意识是物质世界在人脑中的反映
 * 物质决定意识
 * 意识反作用于物质(意识的**能动**作用)
-* 
 
 
 
@@ -93,9 +122,23 @@
 
 
 
-## 社会
+## 辩证法
 
-### 社会矛盾
+### 对立统一规律
+
+(什么是矛盾，矛盾的两个基本属性，同一性的作 用， 斗争性的作用;矛盾特殊性原理——内因与外因，主要矛盾与次要矛盾，主要 方面 与次要方面，根本 矛盾与非根本矛盾);
+
+### 质量互变规律
+
+任何事物的变化都是由量变到质变的过程，量变到一定程度引起质变，产生新质，然后，在新质的基础上又开始新的量变。量变是质变的基础和必要的准备，质变是量变的必然结果。量变质变规律揭示事物发展的形式和形态。
+
+### 否定之否定规律
+
+任何事物的发展变化都是新事物对旧事物的否定，是事物内部的肯定和否定两方面矛盾斗争的结果，是事物自我发展的过程，但是否定并不是全盘抛弃，而是“**扬弃**”，是克服和保留的统一。新事物否定旧事物然后被更新的事物否定，一切事物都是如此“螺旋式”向前发展。否定之否定规律揭示了事物发展的趋势和道路，即事物的发展表现为前进性和曲折性的统一，新事物是不可战胜的。
+
+# 社会形态论
+
+## 社会矛盾
 
 **唯物史观与唯心史观**：社会意识与社会存在关系
 
@@ -137,7 +180,7 @@
 
 
 
-### 社会历史发展的动力
+## 社会历史发展的动力
 
 **社会基本矛盾**
 
@@ -181,7 +224,7 @@
 
 
 
-### 人民群众
+## 人民群众
 
 **创造历史过程中的决定作用**
 
@@ -215,9 +258,9 @@
 * 辩证理解
 
 
-## 资本
+# 资本主义
 
-### 资本主义形成
+## 资本主义形成
 
 **生产关系和生产方式**
 
@@ -228,7 +271,7 @@
     1. 用暴力手段剥夺农民的土地（是资本原始积累过程的基础
     2. 用暴力手段掠夺货币财富
 
-### 商品经济
+## 商品经济
 
 **产生的历史条件**
 
@@ -253,8 +296,8 @@
 
 **劳动的二重性**
 
-* 具体劳动：生产一定使用价值的具体形式的劳动，即有用劳动（形成商品的使用价值，劳动的自然属性）
-* 抽象劳动：撇开一切具体形式的、无差别的一般人类劳动，即人的体力和脑力消耗（形成商品的价值实体，劳动的社会属性）
+* 具体劳动：生产一定使用价值的具体形式的劳动，即有用劳动（形成商品的**<u>使用价值</u>**，劳动的自然属性）
+* 抽象劳动：撇开一切具体形式的、无差别的一般人类劳动，即人的体力和脑力消耗（形成商品的**<u>价值实体</u>**，劳动的社会属性）
 * 具体劳动和抽象劳动也是对立统一的关系
 
 
@@ -282,7 +325,7 @@
 * 作用
     1. 自发地调节生产资料和劳动力在社会各生产部门之间的分配比例
     2. 自发地刺激社会生产力的发展
-    3. 自发地调节社会收入的分
+    3. 自发地调节社会收入的分配
 * 消极后果
     1. 垄断，阻碍技术进步
     2. 引起生产者两极分化
@@ -292,16 +335,18 @@
 
 **商品经济基本矛盾**
 
-* 矛盾：劳动的二重性(另一个)：社会劳动+私人劳动
+* 矛盾：劳动的二重性(另一个)：社会性质的社会劳动+私人性质的私人劳动
 * 社会性质 $\longleftarrow$ 社会分工
 * 私人性质 $\longleftarrow$ 生产资料私有制
 * 这一矛盾贯穿商品经济发展过程的始终
-    1. 决定商品经济本质和发展过程
+    1. 决定商品经济本质和发展过程（交换：使私人劳动转化为社会劳动，是解决这个矛盾的**唯一**途径）
     2. 是商品经济其他一切矛盾的基础
-    3. 决定了商品生产者的命运
+        * 
+    3. 决定了商品生产者的命运（售卖：是私人劳动转化为社会劳动的过程）
 
     
     
+
 **马克思劳动价值论**
 
 * 理论和实践意义
@@ -314,11 +359,101 @@
 
 
 
-### 资本主义本质
+## 资本主义本质
+
+**资本主义基本矛盾**：资本主义基本矛盾是生产社会化与生产资料私有 (在资源配置效率上的不协调)
+
+注：似乎没有根本矛盾这个说法
 
 
 
+**不变资本与可变资本**
+
+* 可变资本指的是资本家用于购买劳动力的那一部分资本。劳动力在使用过程中，不仅能够创造出补偿劳动力价值的价值，而且能创造出剩余价值，使资本增值。这个剩余价值本身是可变化的，从而转化为劳动力的那部分资本在生产过程中改变自己的价值量，马克思称之为可变资本。
+* 不可变资本是指以厂房、机器、原材料等生产资料形式存在的资本，在生产过程中不发生价值增殖。资本是依靠剥削工人带来剩余价值的价值
+
+
+
+**剩余价值率** m' = 剩余价值/可变资本 = 剩余劳动/必要劳动 = 剩余劳动时间/必要劳动时间
+
+
+
+**剩余价值生产的两种基本方法**
+
+1. **绝对**剩余价值的生产：在必要劳动时间不变的条件下，由于延长工作日的长度和提高劳动强度而生产的剩余价值 (多干活)
+2. **相对**剩余价值的生产：在工作日长度不变的条件下，通过缩短必要劳动时间而相对延长剩余劳动时间生产的剩余价值 (少给钱)
+
+**资本积累的本质**：资本家不断地利用无偿占有的工人创造的剩余价值来扩大自己的资本规模，进一步扩大和加强对工人的剥削和统治
+
+
+
+## 垄断
+
+
+
+### 国家垄断
+
+国家垄断资本主义在本质上是<u>资产阶级国家力量</u>同<u>垄断组织力量</u>结合在一起的垄断资本主义。
+
+
+
+### 经济全球化
+
+**经济全球化的动因**
+
+1. 科学技术的进步和生产力的发展
+2. 跨国公司的发展
+3. 各国经济体制的变革
+
+**经济全球化后果**
+
+* 积极效应:
+  1. 资源在全球范围加速流动，发展中国家可利用这一机会引进技术和管理，缩短与发达国家差距
+  2. 发展中国家可吸引外资，扩大就业
+  3. 发展中国家可以利用不断扩大的国际市场解决销售问题，带动对外贸易
+  4. 可以借助投资自由化和比较优势组建大型跨国公司，从中获取更大利益
+* 消极后果:
+  1. 发达国家与发展中国家的差距扩大
+  2. 在经济增长中忽视社会进步，环境恶化与经济全球化有可能同时发生
+  3. 国家内部和国际社会都出现不同程度的治理危机
+  4. 相互的依赖越来越强，而有效的协调机制没建立起来，使爆发全球经济危机风险加大
 # Appendix
 
-国家垄断资本主义的基础是凯恩斯的《就业、利息和货币通论》
+## 选择の🐶题
 
+* 国家垄断资本主义的基础是 <u>凯恩斯的《就业、利息和货币通论》</u>
+* 资本主义生产过程的主要方面是 <u>价值增殖的过程</u>
+* 判定某种上层建筑是先进的还是落后的，主要是看它 ~~是否与自己的经济基础相适应，是否能帮助自己的经济基础的形成和巩固~~ <u>是否能帮助适合生产力状况的生产关系的发展和巩固</u>
+* 资本主义工资的本质是 <u>劳动力的价值或价格</u>
+* 资本主义再生产的特点是 <u>扩大再生产</u>
+* 产业资本在其循环运动中所采取的三种职能形式是 <u>货币资本、生产资本、商品资本</u> *(产业资本在循环过程中的三阶段：购买阶段，生产阶段，售卖阶段)*
+* 关于生产方式下列叙述正确的是 <u>生产力与生产关系的统一体</u>
+* 唯物辩证法的[否定之否定规律](# 否定之否定规律)揭示了事物发展的 <u>方向和道路</u>
+* 正确理解矛盾学说的关键是把握 <u>共性与个性的关系</u>
+* 科学精神与人文精神，在哲学理论上 <u>科学精神体现真理尺度，人文精神体现价值的尺度</u>
+* 马克思说:人在“劳动过程结束时得到的结果，在这个过程开始时就已经在劳动者的表象中存在着，即已经观念地存在着”。这说明了 <u>意识具有能动作用</u> *(考的不是劳动的内容...)*
+* “真理是思想形式，是人类经验的组织形式”这是 <u>主观唯心主义真理论</u>
+* 国家起源于 <u>阶级矛盾的不可调和</u>
+* 从社会意识层次的角度看，社会意识可分为 <u>社会心理和社会意识形式</u>
+* “历史不过是追求着自己目的的人的活动而已。”这句话表明 <u>人们自己创造自己的历史</u>
+* 下面不属于微观规制主要类型的是 <u>社会法律规制</u>
+* 第二次世界大战后，发达资本主义国家工人工作日有所缩短，这表明 <u>绝对剩余价值成为主要剥削形式</u>
+* 国家垄断资本主义的形式中，最主要、最重要的形式是 <u>国家调节经济</u>
+* 只承认绝对运动，否认相对静止，就会导致 <u>相对主义诡辩论</u>
+* 承认真理的客观性与 <u>承认真理的绝对性</u> 是一致的
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 大题
