--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -36,7 +36,7 @@ $$
 
 **Duality Rules**
 
-The duality principle of Boolean algebra states that a Boolean equation **remains valid** if we take the dual of the expressions on both sides of the equals sign.
+The duality principle of Boolean algebra states that a **Boolean equation** **remains valid** if we take the dual of the expressions on both sides of the equals sign.
 
 将F中
 
@@ -88,6 +88,26 @@ $$
 
 ## Logic Gate Circuit
 
+### 主要参数：
+
+* 扇入(Fan-in)
+
+  是指直接调用该模块的上级模块的个数。扇入大表示模块的复用程序高。 
+
+* 扇出(Fan-out)
+
+  是指该模块直接调用的下级模块的个数。扇出大表示模块的复杂度高，需要控制和协调过多的下级模块；但扇出过小（例如总是1）也不好。
+
+* 噪音容限(Noise Margin)
+
+  指在前一极输出为最坏的情况下，为保证后一极正常工作，所允许的最大噪声幅度。在数字电路中，一般常以“1”态下（上）限噪声容限和“0”态上（下）限噪声容限中的最小值来表示电路（或元件）的噪声容限。噪声容限越大说明容许的噪声越大，电路的抗干扰性越好。
+
+* 门的成本(Cost for a gate)
+
+* 传输延迟(Propagation Delay)
+
+* 功耗(Power )
+
 ### Gate Delay
 
 #### Propagation Delay
@@ -108,7 +128,7 @@ Transport delay & Inertial delay (interval <= ***rejection time***)
 
 ![page67image48786816.png](数逻笔记.assets/page67image48786816.png) 
 
-**Universal Gates**$\begin{cases} NAND \\ NOR \end{cases}$
+**Universal Gates**$\rm \begin{cases} \rm NAND \\ \rm NOR \end{cases}$
 
 #### NAND
 
@@ -136,7 +156,7 @@ $A \oplus B = A\overline B+\overline AB$
 
 #### Exclusive NOR(XNOR/异或非/同或)
 
-$A\odot B=\overline{A\oplus B} = AB+\overline A\overline B$
+$\rm A\odot B=\overline{A\oplus B} = AB+\overline A\overline B$
 
 ---
 
@@ -144,31 +164,33 @@ $A\odot B=\overline{A\oplus B} = AB+\overline A\overline B$
 
 add a third logic value
 
-#### 3-state 
+### 3-state
 
 #### Ex. 3-state buffer
 
-![image-20190926141045620](数逻笔记.assets/image-20190926141045620.png)
+<img src="数逻笔记.assets/image-20190926141045620.png" alt="image-20190926141045620" style="zoom:33%;" />
 
 两个3-state buffer
 
-![image-20190926142424116](数逻笔记.assets/image-20190926142424116.png)
+<img src="数逻笔记.assets/image-20190926142424116.png" alt="image-20190926142424116" style="zoom:33%;" />
 
 #### Ex. 3-state gate
 
 Transmission gate(TG)
 
-![image-20190926141935687](数逻笔记.assets/image-20190926141935687.png)
+<img src="数逻笔记.assets/image-20190926141935687.png" alt="image-20190926141935687" style="zoom:33%;" />
 
 2个传输门实现XOR门
 
-![image-20190926142353780](数逻笔记.assets/image-20190926142353780.png)
+<img src="数逻笔记.assets/image-20190926142353780.png" alt="image-20190926142353780" style="zoom:33%;" />
+
+#### Ex. 3-state bus
+
+If the three-state buffers are enabled, then the lines are outputs; if the three-state buffers are disabled, then the lines can be inputs. 但是如果不Load的话input也是没关系的
+
+<img src="数逻笔记.assets/image-20200111163304108.png" alt="image-20200111163304108" style="zoom:33%;" />
 
 
-
-
-
----
 
 ## Simplification
 
@@ -265,9 +287,9 @@ without in another prime implicant.
 找相邻的、翻转对称的
 
 * Minterm：找1
-* Maxterm：找0取反，如下
+* Maxterm：找0获得SOP取反获得POS，如下
 
-<img src="数逻笔记.assets/image-20190926152910697.png" alt="image-20190926152910697" style="zoom:50%;" />
+<img src="数逻笔记.assets/image-20190926152910697.png" alt="image-20190926152910697" style="zoom: 33%;" />
 
 > In most cases, this results in a simplified, although not necessarily optimum, sum-of-products expression.
 >
@@ -284,9 +306,14 @@ without in another prime implicant.
 > Simplify the following Boolean function in product-of-sums form:
 >
 > $F(A,B,C,D) = \Sigma m(0,1,2,5,8,9,10)$
->The 1s marked in the map of Figure 2-20 represent the minterms of the function. The squares marked with 0s represent the minterms not included in F and therefore denote the complement of F. Combining the squares marked with 0s, we obtain the optimized complemented function
+>
+> The 1s marked in the map of Figure 2-20 represent the minterms of the function. The squares marked with 0s represent the minterms not included in F and therefore denote the complement of F. 
+>
+> <img src="数逻笔记.assets/image-20190926152910697.png" alt="image-20190926152910697" style="zoom: 33%;" />
+>
+> Combining the squares marked with 0s, we obtain the optimized complemented function
 > $\overline F= AB+CD+B\overline D$
->Taking the dual and complementing each literal gives the complement of F.This is F in product-of-sums form:
+> Taking the dual and complementing each literal gives the complement of F.This is F in product-of-sums form:
 >
 > $F = (\overline A + \overline B)(\overline C + \overline D)(\overline B + D)$
 
@@ -305,6 +332,61 @@ reg [7:0] C;
 ```
 
 # Ch3
+
+译码器、编码器、数据选择器(多路复用选择器)、数据分配器(支持信号传输？)、数据比较器、奇偶检测器。
+
+### 比较器
+
+#### 无符号加减法器
+
+S=1减法，S=0加法；A>=B得到的是(A-B)，否则得到(B-A)的补码
+
+注：无符号减法不存在溢出问题，只是将进位或借位存储在C4中。
+
+<img src="数逻笔记.assets/image-20200111170116816.png" alt="image-20200111170116816" style="zoom:33%;" />
+
+如果不需要加法功能的话直接S都砍掉，然后XOR改为INV
+
+#### 全加器
+
+Si = Ai ^ Bi ^ Ci-1
+
+Ci = AB + BC + AC
+
+#### 全减器
+
+| Ai   | Bi   | Ci-1 | Di   | Ci   |
+| ---- | ---- | ---- | ---- | ---- |
+| 0    | 0    | 0    | 0    | 0    |
+| 0    | 0    | 1    | 1    | 1    |
+| 0    | 1    | 0    | 1    | 1    |
+| 0    | 1    | 1    | 0    | 1    |
+| 1    | 0    | 0    | 1    | 0    |
+| 1    | 0    | 1    | 0    | 0    |
+| 1    | 1    | 0    | 0    | 0    |
+| 1    | 1    | 1    | 1    | 1    |
+
+Di = Ai ^ Bi ^ Ci-1
+
+Ci = AbarB + AbarC + BC (KMap化简结果)
+
+### 超前进位加法器 lookahead
+
+$$
+C_{i+1} = G_i + P_i \cdot c_i
+\\
+C_{i+2} = G_{i+1} + P_{i+1} \cdot (G_i + P_i \cdot c_i)
+\\
+...
+$$
+
+
+
+<img src="数逻笔记.assets/image-20200112002155206.png" alt="image-20200112002155206" style="zoom:33%;" />![image-20200112002211839](数逻笔记.assets/image-20200112002211839.png)
+
+<img src="数逻笔记.assets/image-20200112002323833.png" alt="image-20200112002323833" style="zoom:33%;" />
+
+<img src="数逻笔记.assets/image-20200111173658707.png" alt="image-20200111173658707" style="zoom: 33%;" />
 
 ### 二补码
 
@@ -779,7 +861,7 @@ $K_1:R0\leftarrow R1\\\overline{K_1}K_2: R0 \leftarrow R2$
     * 行波异步是C来自上一个的Qn，D直接接自己的Qn
     * 串行同步是C接共用clk，D来自上一个寄存器的Q与自己的Q的异或(XOR保证了00->01->10->11->00->...)
 * 并行
-  * 图中的C输出指的是CarryOut，连到D触发器D端口；Q就是对应的D触发器的返回
+  * 图中的C连到D触发器C端口；D_FF的D输入接Qn；Q就是对应的D触发器的返回
   * 相对串行的优点：1111到0000只需一个门的延时，串行要四个
   * 串联多个并行同步计数器的方式 可以有效拓展位数并且时延相对较低
 
@@ -1019,11 +1101,11 @@ DRAM的位片结构与包含刷新逻辑的DRAM框图
 * 注意R/C选择器前面是有寄存器的，这是复用地址线的前提
 * 行地址加载信号(RAS)bar，列地址加载信号(CAS)bar，(这是用于读写而不是用于刷新的？)，实际时RAS由1变0，行地址传到行地址译码器，然后CAS由1变0，列地址传给列地址寄存器
 * 有个刷新控制器与刷新计数器
-  * 刷新计数器在 0 ~ 2^Nr^-1之间变化(注意不是按字计数的啊)
+  * 刷新计数器在 0 ~ 2^Nrow^-1之间变化(注意不是按字计数的啊)
 
 **刷新方式**
 
-集中式刷新：在这刷新的时间中中，内存只用来刷新，阻塞一切存取操作，知道一次刷新完全完成。
+集中式刷新：在这刷新的时间中中，内存只用来刷新，阻塞一切存取操作，直到一次刷新完全完成。
 
 分散式刷新：在每个存取操作后绑定一个刷新操作。
 
