--- a/Assembly/19-12-18.md
+++ b/Assembly/19-12-18.md
@@ -253,6 +253,7 @@ word ptr 0000:01FE是55AAh
 ```assembly
 cmp ax, bx
 je  equal; jump out of range
+; Use the following method
 jne not_equal
 jmp equal; 近跳，利用编译器自动调节jmp短近跳的功能
 not_equal:
@@ -274,16 +275,13 @@ equal:
     Run->User Screen
  */
 
-extern int printf();
-int f(int a, int b)
-{
+extern int printf() ;
+int f(int a, int b) {
    return a+b;
 }
-void zzz(void)	// 由于函数内部设flag外面看不到，于是这里放一个没用的函数就可用(zzz-f)获得f的长度了
-{
+void zzz(void)	{	// 由于函数内部设flag外面看不到，于是这里放一个没用的函数就可用(zzz-f)获得f的长度了
 }
-main()
-{
+main() {
    char buf[100];
    char *p = (char *)printf;
    char *q = (char *)f;
