--- a/概统/概统注意.md
+++ b/概统/概统注意.md
@@ -2,7 +2,7 @@
 
 ---
 
-一个随机变量函数用一个`系数`标准化时注意这个`系数`是否需要开根号
+一个随机变量函数用一个`系数`标准化时注意这个`系数`是否需要开根号，如：$a(\overline X - X_1) \sim \chi^2(1) \Rightarrow a = \frac{25}{24}{}$
 
 ---
 
@@ -14,3 +14,31 @@ $f(x,y) = f_{X|Y}(x|y)f_Y(y) = f_{Y|X}(y|x)f_X(x)$
 
 ---
 
+注意求的是方差还是标准差
+
+---
+
+Mse计算公式，Cov，ρ计算公式，\chi^2计算公式
+
+---
+
+求密度函数f_(X+Y)的三种算法
+
+$$
+\begin{cases}
+	f_Z(z) = \int_{-\infty}^{+\infty} f(x,z-x)dx\\
+	f_Z(z) = \int_{-\infty}^{+\infty}f_X(x)f_Y(z-x)dx(仅X与Y独立时成立)\\
+	f_Z(z) = \frac{dF_Z}{dz}\\
+\end{cases}
+$$
+
+==注意分段讨论==
+
+---
+
+原假设取等；拒绝域取等
+
+拒绝域：
+
+* P\_ <= a
+* \chi^2 >= a
